# ExoPlayer-dav1d

./: core_settings.gradle
demos/main/: build.gradle
extensions/dav1d/: README.md  build.gradle  build_dav1d.sh
extensions/dav1d/src/main/: AndroidManifest.xml
extensions/dav1d/src/main/java/com/google/android/exoplayer2/ext/dav1d/: Gav1Decoder.java  Gav1DecoderException.java  Gav1Library.java  Libdav1dVideoRenderer.java
extensions/dav1d/src/main/jni/: CMakeLists.txt  build_dav1d.sh  dav1d_jni.cc
